frontend/tests/cases/positive/graded/gex0.gr
-- Example expression

main : Int
main = let [x] : (Int [2]) = [1] in x + x
