frontend/tests/cases/negative/graded/gex0.gr
-- Example expression

main : Int
main = let [x] : (Int [1]) = [1] in x + x